--- a/project/covid/index.html
+++ b/project/covid/index.html
@@ -398,7 +398,7 @@
   
   <a class="btn btn-outline-primary my-1 mr-1" href="https://iopscience.iop.org/article/10.1088/1748-9326/abd3d2/pdf" target="_blank" rel="noopener">
     
-    Environmental Research Letters
+    PDF
   </a>
 
   
@@ -488,8 +488,7 @@
   <div class="article-container">
 
     <div class="article-style" itemprop="articleBody">
-      <p>Published on <em>Environmental Research Letters</em>.</p>
-<p>With Lara Aleluia Reis, Valentina Bosetti, and Massimo Tavoni.</p>
+      <p>Granella, F., Reis, L. A., Bosetti, V., &amp; Tavoni, M. (2021). COVID-19 lockdown only partially alleviates health impacts of air pollution in Northern Italy. <em>Environmental Research Letters</em>, 16(3), 035012.</p>
 <p>Evaluating the reduction in pollution caused by a sudden change in emissions is complicated by the
 confounding effect of weather variations. We propose an approach based on machine learning to
 build counterfactual scenarios that address the effect of weather and apply it to the COVID-19
